# OTS-AISStream-Plugin

./: .gitmodules  README.md  pyproject.toml
ots_aisstream_plugin/: WebsocketWrapper.py  __init__.py  app.py  cot_generator.py  default_config.py  rabbitmq_client.py
ots_aisstream_plugin/templates/: base.html  index.html
ots_plugin_template/: app.py  default_config.py
ots_plugin_template/templates/: index.html
