[project]
name = "OTS-AISStream-Plugin"
description = "AISStream plugin for OpenTAKSserver"
authors = [{name = "OpenTAKServer", email = "opentakserver@gmail.com"}]
readme = "README.md"
license = "GPL-3.0-or-later"
dynamic = ["entry-points", "version"]
#packages = [{include = "ots_aisstream_plugin"}, {include = "ots_aisstream_plugin/**/*.py"}]

[tool.poetry]
requires-poetry = ">=2.0"
version = "0.0.0"

[project.urls]
Repository = "https://github.com/brian7704/OTS-AISStream-Plugin"
Documentation = "https://docs.opentakserver.io"

[tool.poetry.dependencies]
opentakserver = "*"
python = ">=3.10, <4.0"
websocket-client = "1.8.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
dirty = false
pattern = "((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[tool.poetry-dynamic-versioning.files."ots_aisstream_plugin/__init__.py"]
persistent-substitution = true
initial-content = """
  # These version placeholders will be replaced later during substitution.
  __version__ = "0.0.0"
  __version_tuple__ = (0, 0, 0)
"""

[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project.entry-points.'opentakserver.plugin']
ots_aisstream_plugin = 'ots_aisstream_plugin.app:AISStreamPlugin'